calamares-settings-ubuntu (24) cosmic; urgency=medium

  [ Wendy Hill ]
  * Rework the Lubuntu slideshow.

  [ Simon Quigley ]
  * Add -E to the desktop icon so that our nice theming carries over.

  [ Walter Lapchynski ]
  * Generalize installation of GRUB for EFI.

 -- Walter Lapchynski <wxl@ubuntu.com>  Tue, 09 Oct 2018 21:51:55 -0700

calamares-settings-ubuntu (23) cosmic; urgency=medium

  * Lubuntu: ensure install .desktop file is always removed.

 -- Walter Lapchynski <wxl@ubuntu.com>  Sat, 06 Oct 2018 19:15:02 -0700

calamares-settings-ubuntu (22) cosmic; urgency=medium

  * Lubuntu: enable LUKS/encryption.

 -- Walter Lapchynski <wxl@ubuntu.com>  Thu, 04 Oct 2018 22:02:57 -0700

calamares-settings-ubuntu (21) cosmic; urgency=medium

  * Lubuntu: remove all password checking.

 -- Walter Lapchynski <wxl@ubuntu.com>  Sat, 25 Aug 2018 17:43:33 -0700

calamares-settings-ubuntu (20) cosmic; urgency=medium

  * Lubuntu: add executable to defaultDesktopEnvironment in displaymanager.

 -- Walter Lapchynski <wxl@ubuntu.com>  Mon, 20 Aug 2018 21:16:47 -0700

calamares-settings-ubuntu (19) cosmic; urgency=medium

  * Remove the build dep completely.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Tue, 14 Aug 2018 17:12:15 -0500

calamares-settings-ubuntu (18) cosmic; urgency=medium

  * Translate into Danish.
  * Make the password detection runtime dep into a build dep.
  * Bump Standards-version to 4.2.0, no changes needed.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Tue, 14 Aug 2018 16:19:36 -0500

calamares-settings-ubuntu (17) cosmic; urgency=medium

  * Add a minimum password strength requirement.
  * Sync default user groups with Neon.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Fri, 10 Aug 2018 20:13:38 -0500

calamares-settings-ubuntu (16) cosmic; urgency=medium

  * Enable automirror by default.
  * Fix a typo in automirror.

 -- Simon Quigley <tsimonq2@ubuntu.com>  Thu, 09 Aug 2018 22:41:53 -0500

calamares-settings-ubuntu (15) cosmic; urgency=medium
